--- a/srcs/auth/public/index.html
+++ b/srcs/auth/public/index.html
@@ -40,8 +40,8 @@
 
         <!-- Pulsanti per il login -->
         <div id="authButtonsContainer">
-            <button class="auth-button" id="loginButton"><span class="text-animation">LOGIN</span></button>
-            <button class="auth-button" id="guestButton"><span class="text-animation">OSPITE</span></button>
+            <button class="auth-button" id="loginButton"name="login"><span class="text-animation">LOGIN</span></button>
+            <button class="auth-button" id="guestButton"name="guest"><span class="text-animation">OSPITE</span></button>
         </div>
 
         <!-- Pulsanti del gioco, visibili solo dopo il login -->
